--- a/_posts/2020-12-30-ISNH-01-10.md
+++ b/_posts/2020-12-30-ISNH-01-10.md
@@ -1,33 +1,32 @@
 ---
-layout: post
+layout: smalltable
 title: 이세계어입문 - 리팔라인어 번역 (1-10 화)
 categories: [Translation, Lineparine, 이세계어입문, 異世界語入門]
+comments: true
 ---
 
-[원문 링크](https://kakuyomu.jp/works/1177354054883808252/episodes/1177354054883808265)
-
-[번역본 링크](https://blog.naver.com/lilies0202/221546557619?viewType=pc)
+[**원문 링크**](https://kakuyomu.jp/works/1177354054883808252/episodes/1177354054883808265) / [**번역본 링크**](https://blog.naver.com/lilies0202/221546557619?viewType=pc)
 
 ## 1 - 10화
 
-| Chap. | Linepairne                                      | Korean (lit.)                           | English (pos-by-pos lit.)                                |
-| ----- | ----------------------------------------------- | --------------------------------------- | -------------------------------------------------------- |
-| 1     | Harmae so es tirne?                             | 넌 누구야?                              | Who you are \<Fem.Q\>                                    |
-| 3     | Mi es ales.xalija. Xalijasti.                   | 나는 알레스 샬리아. 샬리야야.           | I am Ales Shaliya. Shaliya<Voc>                          |
-| 3     | Ja, mi es xalija mal co es jazgasaki.cen tirne? | 응, 난 샬리아고 너는 야츠가사키 센이지? | Yes, I am Shaliya and you are Yatsugasaki Sen \<Fem.Q\>? |
-| 3     | Mi es xalija. Ers niv xalijasti                 | 나는 샬리야야. 샬리야스티가 아니야.     | I am Shaliya. It's not Shaliyasti.                       |
+| \#  | Linepairne                                      | Korean (lit.)                             | English (pos-by-pos lit.)                                |
+| --- | ----------------------------------------------- | ----------------------------------------- | -------------------------------------------------------- |
+| 1   | Harmae so es tirne?                             | 넌 누구야?                                | Who you are `<Fem.Q>`                                    |
+| 3   | Mi es ales.xalija. Xalijasti.                   | 나는 알레스 샬리아. 샬리야야.             | I am Ales Shaliya. Shaliya`<Voc>`.                       |
+| 3   | Ja, mi es xalija mal co es jazgasaki.cen tirne? | 그래, 난 샬리아고 너는 야츠가사키 센이지? | Yes, I am Shaliya and you are Yatsugasaki Sen `<Fem.Q>`? |
+| 3   | Mi es xalija. Ers niv xalijasti                 | 나는 샬리야야. 샬리야스티가 아니야.       | I am Shaliya. It's not Shaliyasti.                       |
 
-### 약자표
+## 약자표
 
 | 약자     | 의미            |
 | -------- | --------------- |
-| \<Male\> | 남성어          |
-| \<Fem\>  | 여성어          |
-| \<Q\>    | 의문            |
-| \<B\>    | 완충음 (buffer) |
-| \<Voc\>  | 호격 (vocative) |
+| `<Male>` | 남성어          |
+| `<Fem>`  | 여성어          |
+| `<Q>`    | 의문            |
+| `<B>`    | 완충음 (buffer) |
+| `<Voc>`  | 호격 (vocative) |
 
-### 문법 참조
+## 문법 참조
 
 본 장을 번역하는데 필요한 문법을 정리
 
