--- a/_posts/2020-12-30-ISNH-01-10.md
+++ b/_posts/2020-12-30-ISNH-01-10.md
@@ -9,22 +9,30 @@ comments: true
 
 ## 1 - 10화
 
-| \#  | Linepairne                                      | Korean (lit.)                             | English (pos-by-pos lit.)                                |
-| --- | ----------------------------------------------- | ----------------------------------------- | -------------------------------------------------------- |
-| 1   | Harmae so es tirne?                             | 넌 누구야?                                | Who you are `<Fem.Q>`                                    |
-| 3   | Mi es ales.xalija. Xalijasti.                   | 나는 알레스 샬리아. 샬리야야.             | I am Ales Shaliya. Shaliya`<Voc>`.                       |
-| 3   | Ja, mi es xalija mal co es jazgasaki.cen tirne? | 그래, 난 샬리아고 너는 야츠가사키 센이지? | Yes, I am Shaliya and you are Yatsugasaki Sen `<Fem.Q>`? |
-| 3   | Mi es xalija. Ers niv xalijasti                 | 나는 샬리야야. 샬리야스티가 아니야.       | I am Shaliya. It's not Shaliyasti.                       |
+| \#  | Linepairne                                                          | Korean (lit.)                                        | English (pos-by-pos lit.)                                                      |
+| --- | ------------------------------------------------------------------- | ---------------------------------------------------- | ------------------------------------------------------------------------------ |
+| 1   | Harmae so es tirne?                                                 | 넌 누구야?                                           | Who you are `<Que.F>`                                                          |
+| 3   | Mi es ales.xalija. Xalijasti.                                       | 나는 알레스 샬리아. 샬리야야.                        | I am Ales Shaliya. Shaliya`<Voc>`.                                             |
+| 3   | Ja, mi es xalija mal co es jazgasaki.cen tirne?                     | 그래, 난 샬리아고 너는 야츠가사키 센이지?            | Yes, I am Shaliya and you are Yatsugasaki Sen `<Que.F>`?                       |
+| 3   | Mi es xalija. Ers niv xalijasti                                     | 나는 샬리야야. 샬리야스티가 아니야.                  | I am Shaliya. It's not Shaliyasti.                                             |
+| 3   | Salarua, Xaliasti! Edixa mi klie dea do!                            | 안녕, 샬리아! 내가 왔어!                             | Hello, Shaliya`<Voc>`! Have I come `<Emp.M>`!                                  |
+| 4   | Merc, xalijasti. Harmae larta es fal fqa                            | 저기, 샬리야. 이 사람 누구야?                        | Hey, Shaliya. Who person is at here?                                           |
+| 4   | Ja...... Mi nat skamarle niv na pa mi niexix eso si's waxundeener'c | 응... 아직 잘 모르겠지만 그는 이세계인이라고 생각해. | Yeah... I yet accept not situation but I think is`<Moun>` he`<Nom>` WXD`<Dat>` |
 
 ## 약자표
 
-| 약자     | 의미            |
-| -------- | --------------- |
-| `<Male>` | 남성어          |
-| `<Fem>`  | 여성어          |
-| `<Q>`    | 의문            |
-| `<B>`    | 완충음 (buffer) |
-| `<Voc>`  | 호격 (vocative) |
+| 약자     | 의미                   |
+| -------- | ---------------------- |
+| WXD      | 이세계인 (Waxundeener) |
+| `<M>`    | 남성어                 |
+| `<F>`    | 여성어                 |
+| `<Noun>` | 명사화                 |
+| `<B>`    | 완충음 (buffer)        |
+| `<Nom>`  | 주격 (nominative)      |
+| `<Voc>`  | 호격 (vocative)        |
+| `<Dat>`  | 여격 (dative)          |
+| `<Que>`  | 의문                   |
+| `<Emp>`  | 강조                   |
 
 ## 문법 참조
 
@@ -37,3 +45,6 @@ comments: true
 - `-sti`: 호격 어미
 - `ers`: `e es`의 준말
   - `e`: 가주어. 리팔라인어에서는 주어가 없으면 명령문이 되므로 명령문이 되는 것을 막음.
+- `fal`: 처격 전치사 (-에)
+- `edixa`: 과거 완료
+  - 리팔라인어에서 완료는 영어의 완료가 아니라 그 시점에서 동작이 끝난 것을 의미.
