--- a/_posts/2020-12-30-ISNH-01-10.md
+++ b/_posts/2020-12-30-ISNH-01-10.md
@@ -17,7 +17,7 @@ comments: true
 | 3   | Mi es xalija. Ers niv xalijasti                                     | 나는 샬리야야. 샬리야스티가 아니야.                  | I am Shaliya. It's not Shaliyasti.                                             |
 | 3   | Salarua, Xaliasti! Edixa mi klie dea do!                            | 안녕, 샬리아! 내가 왔어!                             | Hello, Shaliya`<Voc>`! Have I come `<Emp.M>`!                                  |
 | 4   | Merc, xalijasti. Harmae larta es fal fqa                            | 저기, 샬리야. 이 사람 누구야?                        | Hey, Shaliya. Who person is at here?                                           |
-| 4   | Ja...... Mi nat skamarle niv na pa mi niexix eso si's waxundeener'c | 응... 아직 잘 모르겠지만 그는 이세계인이라고 생각해. | Yeah... I yet accept not situation but I think is`<Moun>` he`<Nom>` WXD`<Dat>` |
+| 4   | Ja...... Mi nat skamarle niv na pa mi niexix eso si's waxundeener'c | 응... 아직 잘 모르겠지만 그는 이세계인이라고 생각해. | Yeah... I yet accept not situation but I think is`<Noun>` he`<Nom>` WXD`<Dat>` |
 
 ## 약자표
 
